[package]
name = "our-string"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/our-string"
documentation = "https://docs.rs/our-string"
description = "Customizable shared strings with inlining"

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
